deploymentConfig.yaml
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: Some name
    labels:
      app: Some name
  spec:
    replicas: 1
    selector:
      deploymentconfig: Some label
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          deploymentconfig: Some label
      spec:
        containers:
          - image: 'myimage:1.2.3'
            imagePullPolicy: IfNotPresent
            name: some name
            ports:
              - containerPort: 9300
                protocol: TCP
              - containerPort: 9200
                protocol: TCP
            resources: {}
            terminationMessagePath: /dev/termination-log
            volumeMounts:
              - mountPath: /my/path/
                name: mount-name
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        volumes:
          - name: mount-name
            persistentVolumeClaim:
              claimName: pvc-name
    test: false
    triggers:
      - type: ConfigChange
