service.yaml
# EXAMPLE OF A SERVICE
- apiVersion: v1
  kind: Service
  metadata:
    name: '${APP_NAME}-%PORT%-%PROTOCOL%'
  spec:
    ports:
      - name: %PORT%-%PROTOCOL%
        port: %PORT%
    selector:
      app: '${APP_NAME}'
    type: ClusterIP
