route.yaml
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      template.openshift.io/expose-uri: 'http://{.spec.host}{.spec.path}'
    labels:
      app: '${APP_NAME}'
    name: '${APP_NAME}-%PORT%-%PROTOCOL%'
  spec:
    port:
      targetPort: %PORT%-%PROTOCOL%
    to:
      kind: Service
      name: '${APP_NAME}-%PORT%-%PROTOCOL%'
